# Rust-Practice

./: README.md
Arrays and Slices/: mem.rs
Debug Trait/: debugtrait.rs
Display List and try/: trydisplay.rs
Display Trait/: displaytrait.rs
Formatting 1/: fmting.rs
KISS Random number and static to blackwhite image/statickiss-rs/: Cargo.toml
KISS Random number and static to blackwhite image/statickiss-rs/src/: main.rs
Literals and operators/: litsandops.rs
PistonGameLibrary-Tutorials/getting-started/src/: main.rs
PistonGameLibrary/getting-started/: Cargo.toml
Primitives 1/: prims.rs
Proof Of Work Blockchain/proof-of-work/: Cargo.toml
Proof Of Work Blockchain/proof-of-work/src/: block.rs  blockchain.rs  main.rs  mining_error.rs
RSnake/rsnake/: Cargo.toml
RSnake/rsnake/src/: game.rs  main.rs  snake.rs
Rust API with Elm Frontend Tutorial by Tensor Programming/api/: .env  Cargo.toml  how_to_build.md
Rust API with Elm Frontend Tutorial by Tensor Programming/api/app/: brunch-config.js  package.json
Rust API with Elm Frontend Tutorial by Tensor Programming/api/app/elm/: elm.json  main.elm
Rust API with Elm Frontend Tutorial by Tensor Programming/api/app/elm/elm-stuff/0.19.0/: Main.elmi  Main.elmo
Rust API with Elm Frontend Tutorial by Tensor Programming/api/app/public/: 404.html  index.html  main.js
Rust API with Elm Frontend Tutorial by Tensor Programming/api/migrations/2018-09-21-203143_add_books_table/: down.sql  up.sql
Rust API with Elm Frontend Tutorial by Tensor Programming/api/public/: index.html
Rust API with Elm Frontend Tutorial by Tensor Programming/api/src/: db.rs  main.rs  models.rs  routes.rs  static_files.rs
Rust Tutorial by Derek Banas/: rusttut.rs
Rust by Example Official Tutorial/01 Hello World/1.0 Hello World/: hello.rs
Rust by Example Official Tutorial/01 Hello World/1.2 Formatted print/: formatting.rs
Rust by Example Official Tutorial/03 Custom Types/3.1 Structures/: structures.rs
Rust by Example Official Tutorial/03 Custom Types/3.3 Constants/: constants.rs
Rust by Example Official Tutorial/04 Variable Bindings/4.0 Variable Bindings/: b.rs
Rust by Example Official Tutorial/05 Types/5.1 Casting/: casting.rs
Sierpinski Triangle Image Generator/triangle/: Cargo.toml
Tuples/: tuples.rs
(+33 files in other folders)
